--- a/docs/style.css
+++ b/docs/style.css
@@ -56,7 +56,7 @@ nav a{
 }
 .content-area p{
     padding: 2% 0 ;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif; 
     line-height: 30px;
 }
 
