--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -8,7 +9,7 @@ body{
     text-align: center;
 }
 .wrapper {
-    width: 1170px;
+    width: 100%;
     margin: 0 auto;
 }
 header{
@@ -19,10 +20,14 @@ header{
     position: fixed;
 }
 nav {
-    float: center;
+    width: 100%;
     line-height: 100px;
+    margin: auto;
 }
 nav a{
+    
+    width: 100%;
+    margin: auto;
     text-decoration: none;
     font-family: sans-serif;
     letter-spacing: 4px;
@@ -45,7 +50,7 @@ nav a{
     position: relative;
     top: 500px;
     background: #ddd;
-    height: 2300px;
+    height: 100%;
 }
 .content-area h2{
     font-family: sans-serif ;
