--- a/style.css
+++ b/style.css
@@ -9,10 +9,12 @@ body{
     text-align: center;
 }
 .wrapper {
+
     width: 100%;
-    margin: 0 auto;
+    margin: auto;
 }
 header{
+    
     height: 100px;
     background: #262626;
     width: 100%;
@@ -36,6 +38,7 @@ nav a{
     color: #fff;
 }
 .banner-area{
+    margin: auto;
     width: 100%;
     height: 500px;
     position: fixed;
@@ -75,10 +78,9 @@ a{
     border: 100%;
 }
 .formulario {
-    border: solid 10px black;
-    border-radius: 40px;
-    height: 500px;
-    width: 450px;
+
+    height: auto;
+    width: auto;
     margin-left: auto;
     margin-right: auto;
 }
@@ -105,10 +107,6 @@ a{
     width: 300px;
     height: 200px;
     display: inline-block;
-}
-.noticias {
-    border: solid 4px black;
-    border-radius: 40px;
 }
 .onde a{
     font-size: large;
