--- a/style.css
+++ b/style.css
@@ -7,14 +7,12 @@
 
 body{
     text-align: center;
+    width: auto;
 }
-.wrapper {
 
-    width: 100%;
-    margin: auto;
-}
+
 header{
-    
+    text-align: right;
     height: 100px;
     background: #262626;
     width: 100%;
@@ -26,13 +24,14 @@ nav {
     line-height: 100px;
     margin: auto;
 }
+nav a:hover{
+    background-color: black;
+}
 nav a{
     
-    width: 100%;
     margin: auto;
     text-decoration: none;
     font-family: sans-serif;
-    letter-spacing: 4px;
     font-size: 20px;
     margin: 0 10px;
     color: #fff;
@@ -66,6 +65,7 @@ nav a{
     padding: 2% 0 ;
     font-family: 'Montserrat', sans-serif; 
     line-height: 30px;
+    
 }
 
 a{
